# mfx_dispatch

./: CMakeLists.txt  Toolchain-cross-mingw32-linux.cmake  libmfx.pc
include/: mfx_critical_section.h  mfx_dispatcher.h  mfx_dispatcher_log.h  mfx_library_iterator.h  mfx_mingw.h
src/: main.cpp  mfx_critical_section.cpp  mfx_dispatcher.cpp  mfx_dispatcher_log.cpp
